RESOLVED FIXED303034
[cleanup] RenderBlockFlow::handleAfterSideOfBlock should not directly set box's logical height
https://bugs.webkit.org/show_bug.cgi?id=303034
Summary [cleanup] RenderBlockFlow::handleAfterSideOfBlock should not directly set box...
alan
Reported 2025-11-23 17:25:25 PST
ssia
Attachments
Patch (11.79 KB, patch)
2025-11-23 17:27 PST, alan
no flags
[fast-cq]Patch (11.79 KB, patch)
2025-11-23 17:30 PST, alan
no flags
alan
Comment 1 2025-11-23 17:27:13 PST
alan
Comment 2 2025-11-23 17:30:41 PST
Created attachment 477489 [details] [fast-cq]Patch
EWS
Comment 3 2025-11-23 19:05:31 PST
Committed 303472@main (84275e8f859c): <https://commits.webkit.org/303472@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477489 [details].
Radar WebKit Bug Importer
Comment 4 2025-11-23 19:06:12 PST
Note You need to log in before you can comment on or make changes to this bug.