[cleanup] RenderBlockFlow::handleAfterSideOfBlock should not directly set box's logical height https://bugs.webkit.org/show_bug.cgi?id=303034

Reviewed by Antti Koivisto.

This is in preparation for calling handleAfterSideOfBlock after inline layout.

* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::layoutWithFormattingContextForBlockInInline):
* Source/WebCore/layout/integration/LayoutIntegrationUtils.cpp:
(WebCore::Layout::IntegrationUtils::toMarginState):
(WebCore::Layout::IntegrationUtils::toMarginInfo):
* Source/WebCore/layout/integration/LayoutIntegrationUtils.h:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutBlockChildren):
(WebCore::RenderBlockFlow::layoutInlineChildren):
(WebCore::RenderBlockFlow::handleAfterSideOfBlock):
* Source/WebCore/rendering/RenderBlockFlow.h:

Canonical link: https://commits.webkit.org/303472@main